Neue TestView hinzugefügt
Im ersten Auswahl-Menü existiert nun ein Punkt "Testauswahl" (oder
ähnlich).
Bei click öffnet sich eine neue Activity.
Diese stellt das Portrait eines Ermittlers dar.
Darunter einen Text.
Darunter zwei Buttons (Schrei und Taunt).
Die Buttons sollen die entsprechenden Sounds abspielen (noch nicht
implementiert).
Diese Ansicht soll später (nach Implementierung der Sound und
"vernünftiger" Übergabe von ID's etc.) die Ermittler-Ansicht erweitern,
so dass für jeden Ermittler mehrere Sounds zur Verfügung stehen
(erstmal, natürlich auch für andere Viecher anwendbar, oder Waffen
(Schuss, Nachladen etc.)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity 
             android:name=".SingleSoundBank" 
             android:label="Soundbank" />
+        <activity 
+            android:name=".SingleCharacter" 
+            android:label="SingleCharacter" />
     </application>
 
 </manifest>
