--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,13 +13,16 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.arkham_soundbank_2.MainActivity"
+            android:name="com.example.arkham_soundbank_2.SplashActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="MainActivity"
+                  android:label="@string/app_name">
         </activity>
         <activity 
             android:name=".SingleSoundBank" 
