TestAnsicht auf Ermittler gelegt
- TestAnsicht entfernt
- Ermittler werden nun als Namensliste angezeigt
- Bei Click auf Namen start von neuer Activity, die die entfernte
TestAnsicht darstellt

Hintergrundfarbe des Splashscreens auf schwarz gesetzt

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,9 @@
         <activity 
             android:name=".SingleCharacter" 
             android:label="SingleCharacter" />
+        <activity 
+            android:name=".Ermitller_Liste" 
+            android:label="Ermitller Liste" />
     </application>
 
 </manifest>
